--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">how to develop own website</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-2" data-rv-view="2" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.ws/c">best web site maker</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-2" data-rv-view="2" style="background-color: rgb(239, 239, 239);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
-                <li data-app-prevent-settings="" data-target="#slider-2" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-2" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-2" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-2" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-2" data-slide-to="4"></li>
+                <li data-app-prevent-settings="" data-target="#slider-2" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-2" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-2" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider-2" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider-2" class="" data-slide-to="4"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted item dark center mbr-section--full-height active" style="background-image: url(assets/images/20017434-678072132382003-8777072816775333153-o-1440x1440.jpg);">
@@ -263,7 +263,7 @@
                             <div class="hide" data-form-alert-success="true">Obrigado por preencher o formulário!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONVITES PARA CULTOS E EVENTOS">
-                            <input type="hidden" value="NUb8t/eo3/3csWnIWvAG9BrK1N4RC9BfYOhmAnvtB5l/YaI7KWXJgwzSLGUo8pcbmR5u0ZzuVRtOEhRdtJpijC+CUiugZcDqOYLtAFoHb2Sej4VshsUgyeRmhOI0vNIq" data-form-email="true">
+                            <input type="hidden" value="bCv8unK5nv4lWGwclmkqRYlE8bedN6Kt8CfT9POzJSyK6Tb6cU87Aa0IIEM35lRbKHFy5WK5Tb543ES5R6ZmEpWwskPCFLW8fNubq7YVADc2Fvwiu3gIfCMGayA+OedS" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nome*" data-form-field="Name">
                             </div>
@@ -299,7 +299,7 @@
                     <div class="col-sm-5 col-sm-offset-1">
                         <p class="mbr-contacts__text"><strong>ENDEREÇO</strong><br>Av. Luxemburgo<br>Mogi Das Cruzes - São Paulo<br><br>
 <strong>CONTATOS</strong><br>
-Email: jefferson1988.j@gmail.com<br>Telefone: 11944487582<br><br></p>
+Email: jefferson1988.j@gmail.com<br>Telefone: 11944487582&nbsp;<br><br></p>
                     </div>
                     <div class="col-sm-6"><ul class="mbr-contacts__list"></ul></div>
                 </div>
@@ -334,7 +334,7 @@ Email: jefferson1988.j@gmail.com<br>Telefone: 11944487582<br><br></p>
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>CRIADO EM 2012 PASSOU POR UM LONGO TEMPO DE EXPERIENCIAS COM DEUS </p><p>ATE CHEGAR A SUA FORMAÇÃO ATUAL.</p><p> NO FINAL DO ANO DE 2017 ,ONDE JEFFERSON,JOSUE, KENNEDY, MATEUS E FRANCISCO ACEITARAM O CHAMADO DE DEUS PARA PROCLAMAR A PALAVRA ATRAVÉS DAS MINISTRAÇÕES E PALAVRA PREGADA DURANTE A EXECUÇÃO DE HINOS INSPIRADOS PELO ESPÍRITO SANTO .</p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>CRIADO EM 2012 PASSOU POR UM LONGO TEMPO DE EXPERIÊNCIAS COM DEUS </p><p>ATE CHEGAR A SUA FORMAÇÃO ATUAL.</p><p> NO FINAL DO ANO DE 2017 ,ONDE JEFFERSON,JOSUE, KENNEDY, MATEUS E FRANCISCO ACEITARAM O CHAMADO DE DEUS PARA PROCLAMAR A PALAVRA ATRAVÉS DAS MINISTRAÇÕES E PALAVRA PREGADA DURANTE A EXECUÇÃO DE HINOS INSPIRADOS PELO ESPÍRITO SANTO .</p></div>
         </div>
     </div>
     
